<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExtraSensory</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_home_tag">home</string>
    <string name="tab_summary_tag">summary</string>
    <string name="tab_history_tag">history</string>
    <string name="tab_home_indicator">Home</string>
    <string name="tab_summary_indicator">Summary</string>
    <string name="tab_history_indicator">History</string>
    <string name="data_collection_label">Data collection:</string>
    <string name="data_collection_on">on</string>
    <string name="data_collection_off">off</string>
    <string name="database_name">extra_sensory_db</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_active_feedback">active feedback</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="dialog_title">ExtraSensory</string>
    <string name="message_cant_report_zero_labels">Feedback must have Some label.</string>
    <string name="api_upload_zip">upload_sensor_data</string>
    <string name="api_feedback">user_labels</string>
    <string name="REC">REC</string>
    <string name="need_google_play_services_message">ExtraSensory needs you to have Google Play services available in order to use Location services. Please update Google Play services!</string>
    <string name="set_google_play_button">Set Google Play</string>
    <string name="cancel">Cancel</string>
    <string name="need_google_play_services_title">Google Play services required</string>
    <string name="title_activity_selection_from_list"></string>
    <string name="previous_history">Previous</string>
    <string name="next_history">Next</string>
    <string name="button_text">Send Feedback</string>
    <string name="currently_storing_text">Currently stored examples:</string>
    <string name="done_selecting_from_list">Done</string>
    <string name="uuid_label">UUID:</string>
    <string name="max_storage_label">Max stored examples:</string>
    <string name="notification_interval">Notification interval:</string>
    <string name="location_bubble_header">Location hidden bubble:</string>
    <string name="location_bubble_on">on</string>
    <string name="location_bubble_off">off</string>
    <string name="latitude_label">latitude:</string>
    <string name="longitude_label">longitude:</string>
    <string name="location_bubble_update_button_label">Update latitude/longitude</string>
    <string name="currently_waiting_feedback_text">Waiting to send feedback:</string>
    <string name="use_secure_communication">Use secure communication:</string>
    <string name="https_on">on</string>
    <string name="https_off">off</string>
    <string name="alert_for_active_feedback_while_data_collection_off">Data collection is off now. Can\'t do active feedback.</string>
    <string name="ok_button_text">O.K.</string>
    <string name="home_sensing_off">no</string>
    <string name="home_sensing_on">yes</string>
    <string name="use_home_sensing">Home sensing:</string>
    <string name="allow_cellular">Allow cellular communication:</string>
    <string name="cellular_off">off</string>
    <string name="cellular_on">on</string>
    <string name="num_examples_store_before_send">Num examples to store before send:</string>
    <string name="send_stored_examples">Send stored examples</string>
    <string name="researcher_settings_label">Researcher settings:</string>
    <string name="classifier_type_label">Classifier type:</string>
    <string name="classifier_name_label">Classifier name:</string>
    <string name="classifier_update_button_label">Update classifier type and name</string>
    <string name="classifier_settings_header">Classifier selection:</string>
    <string name="classifier_settings_off">keep</string>
    <string name="classifier_settings_on">edit</string>
    <string name="record_audio_label">Audio</string>
    <string name="should_we_record_label">Sensor-measurements to record:</string>
    <string name="record_location_label">Location</string>
    <string name="record_watch_label">Watch (acceleration and compass)</string>
    <string name="high_freq_sensors_label">High frequency (40Hz):</string>
    <string name="low_freq_sensors_label">Low frequency (once per minute):</string>
    <string name="use_notifications">Notifications:</string>
    <string name="notifications_on">on</string>
    <string name="notifications_off">off</string>
    <string name="save_pred_files">Save prediction files:</string>
    <string name="save_pred_files_on">on</string>
    <string name="save_pred_files_off">off</string>
    <string name="dummy_main_activity">Not sure</string>
    <string name="checkbox_use_near_past_notifications">To confirm near-past context</string>
    <string name="checkbox_use_near_future_notifications">To report near-future context</string>
    <string name="save_user_labels_files">Save user-labels files:</string>
    <string name="not_sure_dummy_label">not sure</string>
    <string name="text_basic_time_unit">Time resolution:</string>

</resources>
